--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "ckfinder/ckfinder-laravel-package",
+    "name": "vinhphamduc/ckfinder",
     "description": "CKFinder 3 package for Laravel",
     "type": "library",
     "license": "MIT",
     "require": {
         "php": ">=5.6.0",
-        "laravel/framework": "^5.5|~6.0|~7.0",
+        "laravel/framework": "^5.5|~6.0|~7.0|~8.0",
         "pimple/pimple": "~3.0",
         "league/flysystem": "^1.0.45",
         "league/flysystem-aws-s3-v3": "^1.0.13",
